--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,23 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="utf-8">
-  <title>AngularTourOfHeroes</title>
-  <base href="/">
+  <base href="/"/>
+  <title>Warps Pulsar - Make crawling simpler</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link rel="stylesheet" href="assets/css/foundation.min.css">
+  <link rel="stylesheet" href="assets/css/warps.base.css">
+  <link rel="stylesheet" href="assets/css/warps.wufoo.css">
+
+  <script type='text/javascript' src="http://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.1.min.js"></script>
 </head>
+
 <body>
-  <app-root></app-root>
+<div id="container">
+  <div id="stage" class="container clearfix">
+    <app-warps>Loading...</app-warps>
+  </div>
+</div>
 </body>
 </html>
